@@ -1,124 +1,163 @@
 plugins {
-    id 'fabric-loom' version '0.12.+'
-    id 'maven-publish'
-    id "io.github.juuxel.loom-quiltflower" version "1.7.+"
-    id 'org.quiltmc.quilt-mappings-on-loom' version '4.+'
+	alias(libs.plugins.quilt.loom)
+	id 'maven-publish'
 }
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-
 archivesBaseName = project.archives_base_name
-version = project.mod_version + "+" + "build." + project.build_number + "-" + project.minecraft_version
-group = project.maven_group
+version = "$mod_version+build.$build_number-$minecraft_version"
+group = maven_group
 
 repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url "https://raw.githubusercontent.com/vampire-studios/VampireStudiosMaven/main/" }
-    maven { url "https://jitpack.io" }
-    maven { url "https://maven.shedaniel.me" }
-    maven { url "https://server.bbkr.space/artifactory/libs-release/" }
-    maven { url "https://repo.repsy.io/mvn/xxx_inaksis_xxx/inaksis" }
-    maven { url "https://hephaestus.dev/release" }
-    maven { url "https://maven.ryanliptak.com/" }
-    maven { url "https://api.modrinth.com/maven" }
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots" }
-    maven { url "https://maven.wispforest.io" }
-    maven { url "https://maven.minecraftforge.net/" }
-    maven { url "https://maven.terraformersmc.com/" }
-    maven { url "https://repo.codemc.org/repository/maven-public" }
-    maven { url = "https://maven.quiltmc.org/repository/release" }
-    maven { url = "https://maven.quiltmc.org/repository/snapshot" }
+	mavenCentral()
+	mavenLocal()
+	maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
+	maven { url = 'https://server.bbkr.space/artifactory/libs-release/' }
+	maven { url = 'https://repo.repsy.io/mvn/xxx_inaksis_xxx/inaksis' }
+	maven { url = 'https://repo.codemc.org/repository/maven-public' }
+	maven { url = 'https://maven.quiltmc.org/repository/release' }
+	maven { url = 'https://maven.quiltmc.org/repository/snapshot' }
+	maven { url = 'https://maven.minecraftforge.net/' }
+	maven { url = 'https://maven.terraformersmc.com/' }
+	maven { url = 'https://api.modrinth.com/maven' }
+	maven { url = 'https://hephaestus.dev/release' }
+	maven { url = 'https://maven.ryanliptak.com/' }
+	maven { url = 'https://maven.wispforest.io' }
+	maven { url = 'https://maven.shedaniel.me' }
+	maven { url = 'https://maven.siphalor.de' }
+	maven { url = "https://mvn.devos.one/releases/" }
+	maven { url = "https://mvn.devos.one/snapshots/" }
+	maven { url = 'https://jitpack.io' }
 }
 
 loom {
-    accessWidenerPath = file("src/main/resources/obsidian.accesswidener")
+	accessWidenerPath = file("src/main/resources/obsidian.accesswidener")
 }
 
 quiltflower {
-    addToRuntimeClasspath.set(true)
-    fromUrl("https://maven.quiltmc.org/repository/snapshot/org/quiltmc/quiltflower/1.9.0-SNAPSHOT/quiltflower-1.9.0-20220429.122922-1.jar")
+	addToRuntimeClasspath.set(true)
+	fromUrl("https://maven.quiltmc.org/repository/snapshot/org/quiltmc/quiltflower/1.9.0-SNAPSHOT/quiltflower-1.9.0-20220429.122922-1.jar")
 }
 
 dependencies {
-    minecraft libs.minecraft
-    mappings loom.layered {
-        it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2")) // https://maven.quiltmc.org/#browse/browse:release
-    }
-    modImplementation libs.fabric.loader
+	def noFapi = { exclude group: 'net.fabricmc.fabric-api' }
+	def noFLoader = { exclude group: 'net.fabricmc' }
+	def noCottonMC = { exclude group: 'io.github.cottonmc' }
+	def noQuiltMC = { exclude group: 'org.quiltmc' }
 
-    modImplementation(libs.fabric.api) {
-        force = true
-    }
+	minecraft libs.minecraft
+	mappings loom.layered {
+		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2")) // https://maven.quiltmc.org/#browse/browse:release
+	}
 
-    modApi (libs.clothconfig) {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
-    include (libs.clothconfig) {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
+	modImplementation libs.quilt.loader
 
-    modImplementation (libs.vampirelib) {
-        exclude group: "net.fabricmc.fabric-api"
-        exclude group: "io.github.cottonmc"
-    }
-    include (libs.vampirelib) {
-        exclude group: "net.fabricmc.fabric-api"
-        exclude group: "io.github.cottonmc"
-    }
+	modImplementation (libs.bundles.qsl) {
+		force = true
+	}
 
-    modImplementation (libs.appleskin) {
-        exclude group: "net.fabricmc.fabric-api"
-        transitive = false
-    }
-    include (libs.appleskin) {
-        exclude group: "net.fabricmc.fabric-api"
-        transitive = false
-    }
+	modApi (libs.clothconfig) {
+		noFapi
+		noFLoader
+		noCottonMC
+	}
+	include (libs.clothconfig) {
+		noFapi
+		noFLoader
+		noCottonMC
+	}
 
-    modImplementation (libs.owo.lib) {
-        exclude group: "net.fabricmc.fabric-api"
-    }
-    include (libs.owo.lib) {
-        exclude group: "net.fabricmc.fabric-api"
-    }
+	modImplementation (libs.vampirelib) {
+		noFapi
+		noFLoader
+		noCottonMC
+		noQuiltMC
+	}
+	include (libs.vampirelib) {
+		noFapi
+		noFLoader
+		noCottonMC
+		noQuiltMC
+	}
 
-    modImplementation (libs.libzoomer) {
-        exclude group: "net.fabricmc.fabric-api"
-    }
-    include (libs.libzoomer) {
-        exclude group: "net.fabricmc.fabric-api"
-    }
+	modImplementation (libs.appleskin) {
+		transitive false
+		noFapi
+		noFLoader
+		noCottonMC
+	}
+	include (libs.appleskin) {
+		transitive false
+		noFapi
+		noFLoader
+		noCottonMC
+	}
+
+	modImplementation (libs.owo.lib) {
+		noFapi
+		noFLoader
+		noCottonMC
+		noQuiltMC
+	}
+	include (libs.owo.sentinel) {
+		noFapi
+		noFLoader
+		noCottonMC
+		noQuiltMC
+	}
+
+	modImplementation (libs.libzoomer) {
+		noFapi
+		noFLoader
+		noCottonMC
+	}
+	include (libs.libzoomer) {
+		noFapi
+		noFLoader
+		noCottonMC
+	}
+
+	implementation group: 'com.amihaiemil.web', name: 'eo-yaml', version: '6.0.1'
+	implementation 'com.electronwill.night-config:toml:3.6.5'
+	implementation 'com.electronwill.night-config:yaml:3.6.5'
+	implementation 'com.electronwill.night-config:hocon:3.6.5'
 }
 
 processResources {
-    inputs.property "version", project.version
+	inputs.property 'version', version
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
+	filesMatching('fabric.mod.json') {
+		expand 'version': version
+	}
 }
 
 java {
-    withSourcesJar()
-    withJavadocJar()
+	withSourcesJar()
+	withJavadocJar()
+	toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+	it.options.release = 17
+	it.options.encoding = 'UTF-8'
+}
+
+compileJava {
+	options.compilerArgs += '--enable-preview'
 }
 
 jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
-    }
+	from('LICENSE') {
+		rename {
+			"${it}_$archivesBaseName"
+		}
+	}
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
-    repositories {}
+	publications {
+		mavenJava( MavenPublication ) {
+			from components.java
+		}
+	}
+	repositories {}
 }
